diff gradient test

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,12 +22,15 @@ body {
 
 @layer utilities {
   .gradient-bg-100 {
-    background: radial-gradient(ellipse, white 0%, transparent 100%);
+    background: radial-gradient(ellipse, white, white, transparent 100%);
+    /* background: radial-gradient(ellipse, orange, orange, transparent 100%); */
+    /* background: radial-gradient(ellipse, orange 0%, transparent 100%); */
   }
 
   @media (prefers-color-scheme: dark) {
     .gradient-bg-100 {
-      background: radial-gradient(ellipse, black 0%, transparent 100%);
+      background: radial-gradient(ellipse, black, black, transparent 100%);
+      /* background: radial-gradient(ellipse, black 0%, transparent 100%); */
     }
   }
 
